--- a/nginx/uwsgi.ini
+++ b/nginx/uwsgi.ini
@@ -5,7 +5,7 @@ chmod-socket = 666
 logto = /var/log/uwsgi/app/app.log
 chdir = /var/www/app
 wsgi-file = webapp.py
-module = webapp:app
+module = webapp:application
 
 #master = true
 processes = 1
