--- a/nginx/webapp.conf
+++ b/nginx/webapp.conf
@@ -18,12 +18,12 @@ server {
     listen [::]:80;
     server_name 127.0.0.1;
     # Redirect HTTP request to HTTPS
-    #server_name example.com www.example.com;
+    #server_name cyberfrosty.com www.cyberfrosty.com;
     #return 301 https://$server_name$request_uri;
 #}
 #server {
     charset     utf-8;
-    client_max_body_size 25M;
+    client_max_body_size 10M;
 
     # SSL configuration
     #
